--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           <h2>Guess what letter I'm thinking of (only press letters on your keyboard)</h2>
         </div>
         <div class="big-container">        
-         <p>Wins: <span id="win">0</span></p>
+         <p>Correct Guesses: <span id="win">0</span></p>
       
-         <p>Losses: <span id="loss">0</span></p>
+         <p>Wrong Guesses: <span id="loss">0</span></p>
 
          <p>Guesses: <span id="guess"></span></p>
 
@@ -49,3 +49,4 @@
 
   </body>
 </html>
+
