--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
          <p>Wrong Guesses: <span id="loss">0</span></p>
 
-         <p>Guesses: <span id="guess"></span></p>
+         <p>Guesses: <span id="guess">0</span></p>
 
          <p>Guesses Remaining: <span id="remaining">50</span></p>
 
